--- a/client/src/components/cards/allcards.module.css
+++ b/client/src/components/cards/allcards.module.css
@@ -1,4 +1,9 @@
-
+.containerCards{
+    background-color: antiquewhite;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: auto;
+}
 .card{
     background-color: blue;
     
