--- a/client/src/components/cards/cards.module.css
+++ b/client/src/components/cards/cards.module.css
@@ -1,13 +1,46 @@
 .container{
     height: 380px;
     width: 380px;
-    background-color: rgb(255, 240, 102);
-    border: 1px solid #000000;
-    margin: 30px;
+    border: 1px solid #38d1e6; 
+    border-radius: 20px;
+    margin: 20px; 
+    margin-top: 40px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    background: linear-gradient(293deg, rgb(185, 185, 255) 0%, rgb(72, 225, 255) 100%);
+    
+
+}
+.container:hover {
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+  transform: scale(0.98);
+ /* border-radius: 20px; */
+ background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    border-radius: 20px;
+    transition: all .3s;
+ }
+
+.titulo{
+  font-size: 30px;
+  text-transform: uppercase;
+  text-decoration: dotted;
+  list-style: none;
+  color: black;
+}
+
+.tipos{
+  color: black;
+  background: transparent;
+  padding: 5px;
+  margin: 10px;
+  text-transform: uppercase;
+
 }
 
 .img{
-    width: 200px;
+  margin: auto;
+  margin-top: 20px ;
+  
+  width: 200px;
   height: 200px;
   
 }
