--- a/client/src/components/detail/detail.module.css
+++ b/client/src/components/detail/detail.module.css
@@ -1,3 +1,133 @@
-.container{
-    background-color: aqua;
+.contenedor{
+    background: url("https://images7.alphacoders.com/592/592678.jpg");
+    height: 900px;
+    margin-top: -3px;
 }
+.detalles{
+    /* background-color: red; */
+    height: 500px;
+    width: 500px;
+    margin: auto;
+    padding-top: 50px;
+    
+}
+.contenedorCarta{
+    /* background-color: aliceblue;
+    border: 1px solid black;
+    width: 450px;
+    height: 450px;
+    margin: auto;
+    border-radius: 100px 100px 100px 100px  ; */
+    width: 250px;
+  height: 260px;
+  padding: 0.5rem;
+  margin: auto;
+  background: rgba(198, 198, 198, 0.34);
+  border-radius: 8px;
+  backdrop-filter: blur(5px);
+  /* position: absolute; */
+  border-bottom: 3px solid rgba(255, 255, 255, 0.440);
+  border-left: 2px  rgba(255, 255, 255, 0.545) outset;
+  box-shadow: -40px 50px 30px rgba(0, 0, 0, 0.280);
+  transform: skewX(10deg);
+  transition: .4s;
+  overflow: hidden;
+  color: white;
+}
+
+.contenedorCarta:hover{
+    height: 454px;
+  transform: skew(0deg);
+}
+
+.titulo{
+    text-align: center;
+  margin: 1.3rem;
+  color: rgb(34, 44, 41);
+  text-shadow: -10px 5px 10px rgba(0, 0, 0, 0.573);
+  text-transform: uppercase;
+}
+.tipos{
+    color: rgb(34, 44, 41);
+    text-align: center;
+  margin: 1.3rem;
+    text-shadow: -10px 5px 10px rgba(0, 0, 0, 0.573);
+    font-style: italic;
+}
+
+.volver{
+    float: left;
+    border-radius: 560px;
+    padding: 0;
+    height: 60px;
+    width: 60px;
+    margin: 20px;
+}
+
+.volver img{
+    /* border: 1px solid black; */
+    border-radius: 560px;
+    height: 60px;
+    width: 60px;
+}
+
+.id{
+    float: left;
+    margin: 15px;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 200px;
+    padding: 10px;
+}
+/* .titulo{
+    text-transform: uppercase;
+} */
+.img{
+    width: 150px;
+    height: 150px;
+}
+
+.contenedorCaracteristicas{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.caracteristicas{
+    margin: 20px;
+    border: 1px solid black;
+}
+span{
+    background-color: aliceblue;
+    width: 100%;
+}
+.loader {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    display: block;
+    margin: auto;
+    /* margin-left: 80%; */
+    /* position: relative; */
+    background: #FFF;
+    box-shadow: -24px 0 #FFF, 24px 0 #FFF;
+    box-sizing: border-box;
+    animation: shadowPulse 2s linear infinite;
+  }
+  
+  @keyframes shadowPulse {
+    33% {
+      background: #FFF;
+      box-shadow: -24px 0 #FF3D00, 24px 0 #FFF;
+    }
+    66% {
+      background: #FF3D00;
+      box-shadow: -24px 0 #FFF, 24px 0 #FFF;
+    }
+    100% {
+      background: #FFF;
+      box-shadow: -24px 0 #FFF, 24px 0 #FF3D00;
+    }
+  }
+  
+  
